--- a/config/totem.conf
+++ b/config/totem.conf
@@ -1,3 +1,6 @@
 # enable zmk studio for realtime keymap updates
 CONFIG_ZMK_STUDIO=y
 CONFIG_ZMK_STUDIO_LOCKING=n
+
+# enable zmk mouse functionality
+CONFIG_ZMK_POINTING=y
