--- a/build.yaml
+++ b/build.yaml
@@ -24,5 +24,5 @@ include:
     snippet: studio-rpc-usb-uart
   - board: xiao_ble
     shield: totem_right
-  - board: xiao_ble
-    shield: settings_reset
+ # - board: xiao_ble
+ #   shield: settings_reset
