--- a/config/totem.conf
+++ b/config/totem.conf
@@ -4,3 +4,6 @@ CONFIG_ZMK_STUDIO_LOCKING=n
 
 # enable zmk mouse functionality
 CONFIG_ZMK_POINTING=y
+
+# enable requiring a pin for bluetooth pairing requests
+CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
